Fix markdown preview spacing

--- a/meetree/css/meetree.css
+++ b/meetree/css/meetree.css
@@ -385,6 +385,10 @@
     margin: 0 0 0.85em;
 }
 
+.meetree-markdown-spacer {
+    height: 1.6em;
+}
+
 .meetree-markdown-preview ul,
 .meetree-markdown-preview ol {
     padding-left: 1.6em;
